fix: search on mobile (closes #7)

--- a/content/style.less
+++ b/content/style.less
@@ -110,6 +110,10 @@ header {
   }
 }
 
+#search {
+  margin: 0 0.5rem;
+}
+
 .links-nextprev {
   list-style: none;
   border-top: 1px dashed var(--color-gray-20);
